--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  height: 100%;
+  
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,6 +11,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-image: linear-gradient(pink, purple);
   background-size: cover;
+  background-repeat: no-repeat;
+  height:100%;
+  background-attachment: fixed;
 }
 
 code {
